--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </div>
         <div id="buttons">
             <button onclick="window.location.href='https://www.facebook.com/samuel.trindade.75033'" class="button" id="facebook">
-                <a id="socialmedia" href="#" class="fa fa-facebook">
-                    Facebook
-                </a>
+                <a id="socialmedia" href="#" class="fa fa-facebook"></a>
+                Facebook
             </button>
             <button onclick="window.location.href='https://api.whatsapp.com/send?phone=5584988567227'" class="button" id="whatsapp">
                 <a id="socialmedia" href="#" class="fa fa-whatsapp"></a>
